--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,10 +17,11 @@ jobs:
         go-version: [1.18]
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
 
@@ -38,7 +39,7 @@ jobs:
         fi
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: myapp-${{ matrix.os }}
         path: myapp*
