--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,10 +28,8 @@ jobs:
     - name: Initialize Go module
       run: go mod init your_project_name
 
-    - name: Install dependencies
-      run: |
-        go install fyne.io/fyne/v2@latest
-        go install github.com/webview/webview@latest
+    - name: Tidy dependencies
+      run: go mod tidy
 
     - name: Build application
       run: |
