--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,8 +20,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
 
