--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,26 +17,19 @@ jobs:
         python-version: [3.9]  # Обновлено до Go 1.19
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+    with:
+      python-version: '3.9'
+      cache: 'pip' # caching pip dependencies
     - name: Initialize pip
       run: pip install --upgrade pip
 
     - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      run: pip install -r requirements.txt
 
     - name: Build application
-      env:
-        VCPKG_ROOT: ${{ env.VCPKG_ROOT }}
-      run: |
-        pyinstaller test.py --onefile
+      run: pyinstaller test.py --onefile
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
