--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,5 @@
-altgraph==0.17.4
-bottle==0.13.4
-cefpython3==66.0
-importlib_metadata==8.7.0
-packaging==25.0
-proxy-tools==0.1.0
-pyinstaller==6.15.0
-pyinstaller-hooks-contrib==2025.8
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.17
-PyQt5_sip==12.17.0
-PyQtWebEngine==5.15.7
-PyQtWebEngine-Qt5==5.15.17
-pywebview==5.3.2
-QtPy==2.4.3
-typing_extensions==4.14.1
-zipp==3.23.0
+pywebview
+pywebview[qt]
+pywebview[cef]
+pywebview[ssl]
+pyinstaller
