--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,7 +26,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Build application
-        run: pyinstaller test.py --onefile
+        run: pyinstaller main.py --onefile
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
